--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,10 +8,12 @@
 @import '../sass/components/our-features';
 @import '../sass/components/what-we-do';
 @import '../sass/components/team';
-@import '../sass/components/social-icon';
+
 @import '../sass/components/customars';
 @import '../sass/components/footer';
 @import '../sass/components/portfolio';
+@import '../sass/components/social-icon';
+@import '../sass/components/menu';
 
 
 
