--- a/sass/components/_header-underline.scss
+++ b/sass/components/_header-underline.scss
@@ -1,2 +1,9 @@
+.header {
+    position: relative;
+} 
+
 .header-underline {
-    border-bottom: 1px solid #f5f4fa;}
+    border-bottom: 1px solid #f5f4fa;
+}
+
+   
