--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,136 +1,140 @@
 .portfolio-nav {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
 
-  .portfolio-nav__item:not(:last-child) {
-    margin-right: 8px;
+ 
+  
+    .portfolio-nav__item:not(:last-child) {
+      margin-right: 8px;
+    }
+  
+    .portfolio-nav__button {
+      min-width: 73px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.6;
+      background: #f5f4fa;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      padding: 6px 20px;
+      transition: box-shadow $duration $cubic, color $duration $cubic,
+        background-color $duration $cubic;
+    }
+  
+    &__button:hover,
+    &__button:focus {
+      background-color: $accent-color;
+      color: $white-color;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
-
-  .portfolio-nav__button {
-    min-width: 73px;
-    font-weight: 500;
+  
+  
+  // card
+  
+  .portfolio-card {
+    
+    flex-wrap: wrap;
+  
+    line-height: 1.9;
     font-size: 16px;
-    line-height: 1.6;
-    background: #f5f4fa;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    padding: 6px 20px;
-    transition: box-shadow $duration $cubic, color $duration $cubic,
-      background-color $duration $cubic;
-  }
-
-  &__button:hover,
-  &__button:focus {
-    background-color: $accent-color;
-    color: $white-color;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
-}
-
-
-// card
-
-.portfolio-card {
-  flex-wrap: wrap;
-
-  line-height: 1.9;
-  font-size: 16px;
-
-  .portfolio-card__item {
-    transition: box-shadow $duration $cubic;
-  }
-
-  &__item:hover,
-  &__item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-
-  .portfolio-card__item {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
-
-  .portfolio-card__item:nth-child(3n) {
-    margin-right: 0;
-  }
-  .portfolio-card__item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-  }
-
-  &__item:hover .portfolio-overlay ,
-  &__item:focus .portfolio-overlay  {
-    transform: translateY(0);
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  .portfolio-card__subtitle {
-    color: $primary-text-color;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    margin-bottom: 4px;
+  
+    .portfolio-card__item {
+      transition: box-shadow $duration $cubic;
+    }
+  
+    &__item:hover,
+    &__item:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  
+    .portfolio-card__item {
+      width: 370px;
+      margin-right: 30px;
+      margin-bottom: 30px;
+    }
+  
+    .portfolio-card__item:nth-child(3n) {
+      margin-right: 0;
+    }
+    .portfolio-card__item:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  
+    &__item:hover .portfolio-overlay ,
+    &__item:focus .portfolio-overlay  {
+      transform: translateY(0);
+    }
+  
+    a {
+      text-decoration: none;
+    }
+  
+    .portfolio-card__subtitle {
+      color: $primary-text-color;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 2;
+      letter-spacing: 0.06em;
+      margin-bottom: 4px;
+    }
+    
+    .portfolio-card__description {
+      background: $white-color;
+      padding: 20px 24px;
+      background-color: $white-color;
+      border-left: 1px solid #eeeeee;
+      border-bottom: 1px solid #eeeeee;
+      border-right: 1px solid #eeeeee;
+    }
+    .portfolio-card__text {
+      color: $secondery-text-color;
+    }
+  
   }
   
-  .portfolio-card__description {
-    background: $white-color;
-    padding: 20px 24px;
-    background-color: $white-color;
-    border-left: 1px solid #eeeeee;
-    border-bottom: 1px solid #eeeeee;
-    border-right: 1px solid #eeeeee;
-  }
-  .portfolio-card__text {
-    color: $secondery-text-color;
-  }
-
-}
-
-
-
-
-
-
-
-/* Портфолио екшин */
-
-.portfolio-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  content: "";
-  display: flex;
-  align-items: center;
-  background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
-  transition: transform $duration $cubic;
   
-  .portfolio-overlay__text {
+  
+  
+  
+  
+  
+  /* Портфолио екшин */
+  
+  .portfolio-overlay {
+    
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: "";
     display: flex;
-    padding: 0 24px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-    color: $white-color;
+    align-items: center;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition: transform $duration $cubic;
+    
+    .portfolio-overlay__text {
+      display: flex;
+      padding: 0 24px;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 1.56;
+      letter-spacing: 0.03em;
+      color: $white-color;
+    }
+  
   }
-
-}
-
-.card-overflow {
-  position: relative;
-  overflow: hidden;
-}
-
-
-
+  
+  .card-overflow {
+   
+    position: relative;
+    overflow: hidden;
+  }
+  
+  
+  
+  
