--- a/ww base style /components/_logo.scss
+++ b/ww base style /components/_logo.scss
@@ -1,15 +1,11 @@
-
-.logo  {
-    display: inline-block;
+.logo {
     font-family: $logo-font;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 1.16;
+    font-size: 26px;
+    line-height: 1.2;
     color: $primary-text-color;
     text-decoration: none;
-    padding:  16px 0;
-   
-
+    margin-right: 94px;
   
     &:hover,
     &:focus {
@@ -19,13 +15,16 @@
     .logo__text {
       color: $accent-color;
     }
-   
+
    
   }
   
   .fotter-logo{
-    color: $white-color;   
+    display: inline-block;
+    color: $white-color;
+    margin-bottom: 20px;
     margin-top: 0;
     margin-right: 0;
   }
+
 
