--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,63 +1,56 @@
 body {
-    font-family: $font;
-    color: $primary-text-color;
-    background-color: $white-color;
-    font-size: 14px;
-    line-height: 1.8;
-    letter-spacing: 0.03em;
-    margin: 0;
-  }
+  font-family: $font;
+  color: $primary-text-color;
+  background-color: $white-color;
+  font-size: 14px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
+  margin: 0;
+}
 
-  .list {
-    list-style: none;
-  }
-  img {
-    display: block;
-  }
-  
-  h1,
-  h2,
-  h3,
-  p,
-  ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-  }
-.flex{
+.list {
+  list-style: none;
+}
+img {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+}
+.flex {
   display: flex;
 }
 
-  .container {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
 
-
-    @media screen and (min-width: 480px) {
-       width: 480px;
-        
-    }
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
+}
 
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 
+.portfolio-items a {
+  text-decoration: none;
+}
 
-    @media screen and (min-width: 480px) {
-    
-  }
-
-  }
-
-  .portfolio-items a {
-    text-decoration: none;
-  }
-
-  .hiden-element {
-    visibility: hidden;
-    pointer-events: none;
-    position: absolute;
-  }
+.hiden-element {
+  visibility: hidden;
+  pointer-events: none;
+  position: absolute;
+}
