--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -40,8 +40,8 @@ margin-bottom: 302px;
 
   
   
-@media screen and(min-width: 768px) {
-  display: inherit;
+// @media screen and(min-width: 768px) {
+//   display: inherit;
   
 }
 }
