--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -32,6 +32,13 @@
     max-width: 360px;
     margin-left: auto;
     margin-right: auto;
+    
+    @media screen and (min-width: 768px) {
+      font-size: 44px;
+      line-height: 1.36;
+      max-width: 696px;
+      
+    }
 
    
   }
