--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,10 +4,16 @@
     font-family: $logo-font;
     font-weight: 700;
     font-size: 24px;
-    line-height: 1.16;
+    line-height: 1.37;
     color: $primary-text-color;
     text-decoration: none;
     padding:  16px 0;
+
+    @media screen and(min-width: 768px) {
+      font-size: 26px;
+    line-height: 1.2;
+      
+    }
    
 
   
