--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 
 .menu-button {
@@ -13,22 +12,29 @@
   border: none;
   background-color: transparent;
 
-  
+  &__icon-menu {
+    fill: currentColor;
+    transition: color $duration $duration;
+  }
+  &__icon-cross {
+    fill: currentColor;
+    transition: color $duration $duration;
+  }
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 
   @media screen and (min-width: 768px) {
     display: none;
   }
 }
-.menu-button:hover,
-.menu-button:focus{
-  color: $accent-color;
-}
-
 
 .js-close-menu {
   position: absolute;
   top: -40px;
-  right: -10px;
+  right: 0;
   z-index: 99;
 }
 
@@ -48,46 +54,34 @@
     transform: translateX(0);
   }
 
-  .menu-container__wrap{
+  .menu-container__wrap {
     max-width: 450px;
     position: relative;
     margin-right: auto;
     margin-left: auto;
   }
-  
-
-
 }
 
+.menu-container__social-list {
+  display: flex;
 
-  .menu-container__social-list{
-    display: flex;
+  .menu-container__social-link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
 
-    .menu-container__social-link{
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 1.22;
-  
-      text-decoration: none;
-      color: $accent-color;
-      
-      
-    }
-  
-  
-    .menu-container__social-item:not(:first-child)::before{
-      content: '';
-      border: 1px solid rgba(33, 33, 33, 0.2);
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-  
-
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
+    text-decoration: none;
+    color: $accent-color;
   }
 
- 
+  .menu-container__social-item:not(:first-child)::before {
+    content: "";
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 
-
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
