--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,9 +1,16 @@
 .portfolio-nav {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+
 
  
   
     .portfolio-nav__item:not(:last-child) {
       margin-right: 8px;
+    }
+    .portfolio-nav__item:nth-last-child(n+3){
+      margin-bottom: 21px;
     }
   
     .portfolio-nav__button {
@@ -18,6 +25,7 @@
       padding: 6px 20px;
       transition: box-shadow $duration $cubic, color $duration $cubic,
         background-color $duration $cubic;
+
     }
   
     &__button:hover,
@@ -34,8 +42,7 @@
   
   .portfolio-card {
     
-    flex-wrap: wrap;
-  
+    
     line-height: 1.9;
     font-size: 16px;
   
@@ -50,8 +57,8 @@
     }
   
     .portfolio-card__item {
-      width: 370px;
-      margin-right: 30px;
+    min-width: 320px;
+      
       margin-bottom: 30px;
     }
   
@@ -78,9 +85,11 @@
       line-height: 2;
       letter-spacing: 0.06em;
       margin-bottom: 4px;
+  white-space: nowrap;
     }
     
     .portfolio-card__description {
+      
       background: $white-color;
       padding: 20px 24px;
       background-color: $white-color;
