--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,12 @@ ul {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -106,6 +112,15 @@ ul {
   margin-bottom: 302px;
 }
 
+@media screen and (min-width: 768px) {
+  .main-nav {
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .main-nav .main-nav__link {
   text-decoration: none;
   font-weight: 500;
@@ -118,6 +133,13 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .main-nav .main-nav__link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
 .main-nav__link:hover, .main-nav__link:focus {
   color: #2196f3;
 }
@@ -128,6 +150,12 @@ ul {
 
 .main-nav .main-nav__item:not(:last-child) {
   margin-bottom: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav .main-nav__item:not(:last-child) {
+    margin: 0;
+  }
 }
 
 .main-nav .main-nav__link::after {
@@ -145,7 +173,7 @@ ul {
 
 @media screen and (min-width: 768px) {
   .main-nav .main-nav__link::after {
-    display: inherit;
+    display: block;
   }
 }
 
@@ -161,6 +189,19 @@ ul {
   margin-bottom: 64px;
 }
 
+@media screen and (min-width: 768px) {
+  .connect-header {
+    margin: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .connect-header .connect-header__link {
   text-decoration: none;
   font-size: 34px;
@@ -172,14 +213,38 @@ ul {
   transition: color 250ms 250ms;
 }
 
+@media screen and (min-width: 768px) {
+  .connect-header .connect-header__link {
+    font-size: 14px;
+    line-height: 1.14;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .connect-header .connect-header__link-blue {
   color: #2196f3;
   margin-bottom: 32px;
 }
 
+@media screen and (min-width: 768px) {
+  .connect-header .connect-header__link-blue {
+    margin: 0;
+    color: #757575;
+  }
+}
+
 .connect-header .connect-header__link-size {
   font-size: 28px;
   line-height: 1.18;
+}
+
+@media screen and (min-width: 768px) {
+  .connect-header .connect-header__link-size {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 .connect-header__link:hover, .connect-header__link:focus {
@@ -188,6 +253,12 @@ ul {
 
 .connect-header .connect-header__item:not(:last-child) {
   margin-bottom: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .connect-header .connect-header__item:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .connect-header .connect-header__icon-mail {
@@ -203,6 +274,12 @@ ul {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .connect-header .connect-header__icon-mail {
+    display: block;
+  }
+}
+
 .connect-header .connect-header__icon-phone {
   width: 10px;
   height: 16px;
@@ -213,6 +290,12 @@ ul {
 @media screen and (max-width: 767px) {
   .connect-header .connect-header__icon-phone {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .connect-header .connect-header__icon-phone {
+    display: block;
   }
 }
 
@@ -1074,6 +1157,21 @@ ul {
   background-color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-container {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    background-color: transparent;
+    position: unset;
+    padding: 0;
+    width: unset;
+    height: unset;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .menu-container.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -1084,6 +1182,15 @@ ul {
   position: relative;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container .menu-container__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+  }
 }
 
 .menu-container__social-list {
