--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -38,6 +38,11 @@ ul {
   @media screen and (min-width: 480px) {
     width: 480px;
   }
+
+  @media screen and(min-width: 768px) {
+    
+    width: 768px;
+  }
 }
 
 .section {
