--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,11 @@
 .main-nav {
-margin-bottom: 302px;
-  
+  margin-bottom: 302px;
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    display: flex;
+  }
+
   .main-nav__link {
     text-decoration: none;
     font-weight: 500;
@@ -11,6 +16,11 @@ margin-bottom: 302px;
     display: inline-block;
     font-size: 40px;
     transition: color $duration $cubic;
+
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
 
   &__link:hover,
@@ -20,10 +30,18 @@ margin-bottom: 302px;
 
   .main-nav__item {
     position: relative;
+    @media screen and (min-width: 768px) {
+      
+    
+    }
   }
 
   .main-nav__item:not(:last-child) {
     margin-bottom: 32px;
+
+    @media screen and (min-width: 768px) {
+      margin: 0;
+    }
   }
 
   .main-nav__link::after {
@@ -38,13 +56,10 @@ margin-bottom: 302px;
     opacity: 0;
     display: none;
 
-  
-  
-// @media screen and(min-width: 768px) {
-//   display: inherit;
-  
-}
-}
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
+  }
   .main-nav__current::after {
     opacity: 1;
   }
@@ -55,8 +70,12 @@ margin-bottom: 302px;
 }
 
 .connect-header {
- 
   margin-bottom: 64px;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    flex-direction: column-reverse;
+    display: flex;
+  }
 
   .connect-header__link {
     text-decoration: none;
@@ -66,25 +85,48 @@ margin-bottom: 302px;
     letter-spacing: 0.02em;
     color: $secondery-text-color;
     transition: color $duration $duration;
+
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.14;
+      display: flex;
+
+    }
   }
+  
+
 
   .connect-header__link-blue {
     color: $accent-color;
     margin-bottom: 32px;
+    @media screen and (min-width: 768px) {
+      margin: 0;
+      color: $secondery-text-color;
+    }
   }
 
   .connect-header__link-size {
     font-size: 28px;
     line-height: 1.18;
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
 
   &__link:hover,
   &__link:focus {
     color: $accent-color;
   }
-
+  
   .connect-header__item:not(:last-child) {
     margin-bottom: 32px;
+    
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+    }
+
+
   }
 
   .connect-header__icon-mail {
@@ -93,9 +135,13 @@ margin-bottom: 302px;
     margin-right: 10px;
     fill: currentColor;
 
-
     @media screen and (max-width: 767px) {
       display: none;
+    }
+
+    @media screen and(min-width: 768px) {
+      display: block;
+
     }
   }
   .connect-header__icon-phone {
@@ -107,6 +153,8 @@ margin-bottom: 302px;
     @media screen and (max-width: 767px) {
       display: none;
     }
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
   }
 }
-
