--- a/css/main.css
+++ b/css/main.css
@@ -53,9 +53,22 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio-items a {
@@ -87,7 +100,7 @@ ul {
   padding: 16px 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .logo {
     font-size: 26px;
     line-height: 1.2;
@@ -108,6 +121,13 @@ ul {
   margin-right: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .fotter-logo {
+    padding: 0;
+    margin-bottom: 20px;
+  }
+}
+
 .main-nav {
   margin-bottom: 302px;
 }
@@ -118,6 +138,13 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-right: 84px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-nav {
+    margin-right: 305px;
   }
 }
 
@@ -148,13 +175,20 @@ ul {
   position: relative;
 }
 
+@media screen and (min-width: 768px) {
+  .main-nav .main-nav__item {
+    padding: 32px 0;
+  }
+}
+
 .main-nav .main-nav__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
 @media screen and (min-width: 768px) {
   .main-nav .main-nav__item:not(:last-child) {
-    margin: 0;
+    margin-bottom: 0;
+    margin-right: 50px;
   }
 }
 
@@ -199,6 +233,31 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 21px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .connect-header {
+    -webkit-box-orient: unset;
+    -webkit-box-direction: unset;
+        -ms-flex-direction: unset;
+            flex-direction: unset;
+    padding: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-flow: row-reverse;
+        flex-flow: row-reverse;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .connect-header .connect-header__item:last-child {
+    margin-right: 50px;
   }
 }
 
@@ -215,11 +274,21 @@ ul {
 
 @media screen and (min-width: 768px) {
   .connect-header .connect-header__link {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.14;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .connect-header .connect-header__link {
+    font-size: 14px;
+    padding: 32px 0;
   }
 }
 
@@ -314,6 +383,13 @@ ul {
   padding-bottom: 118px;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+    padding: 200px 0;
+  }
+}
+
 .hero .hero__name {
   font-weight: 900;
   font-size: 26px;
@@ -328,7 +404,7 @@ ul {
   margin-right: auto;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero .hero__name {
     font-size: 44px;
     line-height: 1.36;
@@ -607,8 +683,64 @@ ul {
   color: #2196f3;
 }
 
+.our-features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .our-features .our-features__item:not(:last-child) {
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-features .our-features__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-features .our-features__item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-features .our-features__item:nth-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-features .our-features__item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-features .our-features__item:nth-child(2n + 1) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-features .our-features__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-features .our-features__item {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-features .our-features__item {
+    width: 270px;
+  }
 }
 
 .our-features .our-features__item .our-features__subtitle {
@@ -618,6 +750,12 @@ ul {
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-features .our-features__item .our-features__subtitle {
+    text-align: unset;
+  }
 }
 
 .our-features .our-features__item .our-features__text {
@@ -643,6 +781,12 @@ ul {
           align-items: center;
 }
 
+@media screen and (min-width: 480px) {
+  .our-features .our-features__bg {
+    width: 100%;
+  }
+}
+
 .our-features .our-features__icon {
   fill: #212121;
 }
@@ -655,6 +799,12 @@ ul {
 
 .section__what-we-do {
   display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .section__what-we-do {
+    display: block;
+  }
 }
 
 .what-we-do .what-we-do__item {
@@ -697,7 +847,7 @@ ul {
   display: inline-block;
 }
 
-.title {
+.what-we-do__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -709,6 +859,16 @@ ul {
   background-color: #f5f4fa;
 }
 
+@media screen and (min-width: 768px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .team .team__item {
   text-align: center;
   background: #ffffff;
@@ -717,13 +877,44 @@ ul {
   border-radius: 0px 0px 4px 4px;
 }
 
+@media screen and (min-width: 768px) {
+  .team .team__item {
+    width: 354px;
+    height: 536px;
+  }
+}
+
 .team .team__item:not(:last-child) {
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team .team__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team .team__item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team .team__item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
 }
 
 .team .team__photo {
   max-width: 450px;
   max-height: 460px;
+}
+
+@media screen and (min-width: 768px) {
+  .team .team__photo {
+    max-width: 354px;
+  }
 }
 
 .team .team__text {
@@ -757,8 +948,28 @@ ul {
           justify-content: space-between;
 }
 
-.customers .customers__item:nth-child(-2n+3) {
+@media screen and (min-width: 768px) {
+  .customers {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+.customers .customers__item:nth-child(-2n + 3) {
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .customers .customers__item:nth-child(-2n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers .customers__item:nth-child(-n+3) {
+    margin-bottom: 30px;
+  }
 }
 
 .customers .customers__link {
@@ -800,6 +1011,19 @@ ul {
 
 .wrap-address {
   margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .wrap-address-join {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
 }
 
 .address {
@@ -861,6 +1085,12 @@ ul {
   color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .sign-us .sign-us__input {
+    width: 450px;
+  }
+}
+
 .sign-us .sign-us__btn {
   margin: 0 auto;
   background: #2196f3;
@@ -901,12 +1131,27 @@ ul {
   margin-bottom: 40px;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio-nav {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
 .portfolio-nav .portfolio-nav__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-nav .portfolio-nav__item:nth-last-child(n+3) {
+.portfolio-nav .portfolio-nav__item:nth-last-child(n + 3) {
   margin-bottom: 21px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-nav .portfolio-nav__item:nth-last-child(n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio-nav .portfolio-nav__button {
@@ -937,11 +1182,32 @@ ul {
   font-size: 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .portfolio-card .portfolio-card__item {
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  min-width: 320px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-card .portfolio-card__item {
+    width: 354px;
+  }
 }
 
 .portfolio-card__item:hover, .portfolio-card__item:focus {
@@ -949,27 +1215,16 @@ ul {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-card .portfolio-card__item {
-  min-width: 320px;
-  margin-bottom: 30px;
-}
-
-.portfolio-card .portfolio-card__item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.portfolio-card .portfolio-card__item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .portfolio-card .portfolio-card__item:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .portfolio-card__item:hover .portfolio-overlay,
 .portfolio-card__item:focus .portfolio-overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
-}
-
-.portfolio-card a {
-  text-decoration: none;
 }
 
 .portfolio-card .portfolio-card__subtitle {
@@ -993,6 +1248,22 @@ ul {
 
 .portfolio-card .portfolio-card__text {
   color: #757575;
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-card img {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-card img {
+    width: 354px;
+  }
+}
+
+.portfolio-card a {
+  text-decoration: none;
 }
 
 /* Портфолио екшин */
@@ -1135,8 +1406,8 @@ ul {
 
 .js-close-menu {
   position: absolute;
-  top: -40px;
-  right: 0;
+  top: -35px;
+  right: -25px;
   z-index: 99;
 }
 
@@ -1190,6 +1461,7 @@ ul {
     display: -ms-flexbox;
     display: flex;
     margin: 0;
+    max-width: 100%;
   }
 }
 
