--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,6 +6,7 @@ body {
   line-height: 1.8;
   letter-spacing: 0.03em;
   margin: 0;
+  
 }
 
 .list {
@@ -43,11 +44,22 @@ ul {
     
     width: 768px;
   }
+
+  @media screen and(min-width: 1200px) {
+    width: 1200px;
+  }
+
+
 }
 
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and(min-width: 1200px) {
+    padding-top: 94px;
+  padding-bottom: 94px;
+  }
 }
 
 .portfolio-items a {
