--- a/sass/components/_customars.scss
+++ b/sass/components/_customars.scss
@@ -1,49 +1,53 @@
-.customers{
+.customers {
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-between;
+  @media screen and(min-width: 768px){
+    justify-content: space-evenly;
 
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-between;
-    
+  }
 
+
+  .customers__item:nth-child(-2n + 3) {
+    margin-bottom: 30px;
+
+    @media screen and(min-width: 768px) {
+      margin-bottom: 0;
+    }
+  }
 
  
-    .customers__item:nth-child(-2n+3){
-        margin-bottom: 30px;
+
+  .customers__item:nth-child(-n+3){
+    @media screen and(min-width: 768px){
+      margin-bottom: 30px;
+
     }
-    
-  
-  
-  
-    
-    .customers__link {
-      width: 210px;
-      height: 92px;
-      display: flex;
-      border: 1px solid #afb1b8;
-      border-radius: 4px;
-      justify-content: center;
-      align-items: center;
-      color: #afb1b8;
-      transition: color $duration $cubic,
-        border $duration $cubic;
-       
-    }
-  
-    &__link:hover,
-    &__link:focus {
-      color: $accent-color;
-      border: 1px solid $accent-color;
-    }
-    
-  
-  
-    .customers__icon {
-      display: inline-block;
-      border: none;
-      fill: currentColor;
-    }
-    
+
   }
-    
-  
-   
+ 
+
+  .customers__link {
+    width: 210px;
+    height: 92px;
+    display: flex;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+    color: #afb1b8;
+    transition: color $duration $cubic, border $duration $cubic;
+  }
+
+  &__link:hover,
+  &__link:focus {
+    color: $accent-color;
+    border: 1px solid $accent-color;
+  }
+
+  .customers__icon {
+    display: inline-block;
+    border: none;
+    fill: currentColor;
+  }
+}
