--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,7 +7,20 @@
 
 .wrap-address {
     margin-bottom: 60px;
+
   
+  
+}
+
+.wrap-address-join{
+  @media screen and(min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    
+  }
+
 }
 
 .address {
@@ -73,6 +86,10 @@
     width: 100%;
     height: 50px;
     color: $white-color;
+
+    @media screen and(min-width: 768px){
+      width: 450px;
+    }
   }
 
   .sign-us__btn {
