--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -16,6 +16,12 @@
   text-align: center;
   padding-top: 118px;
   padding-bottom: 118px;
+
+  @media screen and(min-width: 1200px) {
+    height: 600px;
+    padding: 200px 0;
+    
+  }
  
 
   
@@ -33,12 +39,15 @@
     margin-left: auto;
     margin-right: auto;
     
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1200px) {
       font-size: 44px;
       line-height: 1.36;
       max-width: 696px;
       
+     
+      
     }
+
 
    
   }
