--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,37 +1,34 @@
+.logo {
+  display: inline-block;
+  font-family: $logo-font;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.37;
+  color: $primary-text-color;
+  text-decoration: none;
+  padding: 16px 0;
 
-.logo  {
-    display: inline-block;
-    font-family: $logo-font;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.37;
-    color: $primary-text-color;
-    text-decoration: none;
-    padding:  16px 0;
-
-    @media screen and(min-width: 768px) {
-      font-size: 26px;
+  @media screen and(min-width: 1200px) {
+    font-size: 26px;
     line-height: 1.2;
-      
-    }
-   
-
-  
-    &:hover,
-    &:focus {
-      cursor: pointer;
-    }
-  
-    .logo__text {
-      color: $accent-color;
-    }
-   
-   
-  }
-  
-  .fotter-logo{
-    color: $white-color;   
-    margin-top: 0;
-    margin-right: 0;
   }
 
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
+
+  .logo__text {
+    color: $accent-color;
+  }
+}
+
+.fotter-logo {
+  color: $white-color;
+  margin-top: 0;
+  margin-right: 0;
+  @media screen and(min-width: 768px) {
+    padding: 0;
+    margin-bottom: 20px;
+  }
+}
