--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -3,6 +3,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media screen and (min-width: 768px){
+
+    
+    
+  }
+
 }
 
 .menu-button {
@@ -33,8 +39,8 @@
 
 .js-close-menu {
   position: absolute;
-  top: -40px;
-  right: 0;
+  top: -35px;
+  right: -25px;
   z-index: 99;
 }
 
@@ -58,6 +64,8 @@
     width: unset;
     height: unset;
     display: flex;
+  
+
   }
 
 
@@ -76,6 +84,7 @@
     
       display: flex;
       margin: 0;
+      max-width: 100%;
     }
   }
 
