--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -3,147 +3,148 @@
   flex-wrap: wrap;
   margin-bottom: 40px;
 
-
- 
-  
-    .portfolio-nav__item:not(:last-child) {
-      margin-right: 8px;
-    }
-    .portfolio-nav__item:nth-last-child(n+3){
-      margin-bottom: 21px;
-    }
-  
-    .portfolio-nav__button {
-      min-width: 73px;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.6;
-      background: #f5f4fa;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      padding: 6px 20px;
-      transition: box-shadow $duration $cubic, color $duration $cubic,
-        background-color $duration $cubic;
-
-    }
-  
-    &__button:hover,
-    &__button:focus {
-      background-color: $accent-color;
-      color: $white-color;
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+  @media screen and(min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
   }
-  
-  
-  // card
-  
-  .portfolio-card {
-    
-    
-    line-height: 1.9;
-    font-size: 16px;
-  
-    .portfolio-card__item {
-      transition: box-shadow $duration $cubic;
-    }
-  
-    &__item:hover,
-    &__item:focus {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
-  
-    .portfolio-card__item {
-    min-width: 320px;
-      
-      margin-bottom: 30px;
-    }
-  
-    .portfolio-card__item:nth-child(3n) {
-      margin-right: 0;
-    }
-    .portfolio-card__item:nth-last-child(-n + 3) {
+
+  .portfolio-nav__item:not(:last-child) {
+    margin-right: 8px;
+  }
+  .portfolio-nav__item:nth-last-child(n + 3) {
+    margin-bottom: 21px;
+    @media screen and(min-width: 768px) {
       margin-bottom: 0;
     }
-  
-    &__item:hover .portfolio-overlay ,
-    &__item:focus .portfolio-overlay  {
-      transform: translateY(0);
-    }
-  
-    a {
-      text-decoration: none;
-    }
-  
-    .portfolio-card__subtitle {
-      color: $primary-text-color;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 2;
-      letter-spacing: 0.06em;
-      margin-bottom: 4px;
-  white-space: nowrap;
-    }
-    
-    .portfolio-card__description {
-      
-      background: $white-color;
-      padding: 20px 24px;
-      background-color: $white-color;
-      border-left: 1px solid #eeeeee;
-      border-bottom: 1px solid #eeeeee;
-      border-right: 1px solid #eeeeee;
-    }
-    .portfolio-card__text {
-      color: $secondery-text-color;
-    }
-  
   }
-  
-  
-  
-  
-  
-  
-  
-  /* Портфолио екшин */
-  
-  .portfolio-overlay {
-    
-    position: absolute;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    content: "";
+
+  .portfolio-nav__button {
+    min-width: 73px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    background: #f5f4fa;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    padding: 6px 20px;
+    transition: box-shadow $duration $cubic, color $duration $cubic,
+      background-color $duration $cubic;
+  }
+
+  &__button:hover,
+  &__button:focus {
+    background-color: $accent-color;
+    color: $white-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+
+// card
+
+.portfolio-card {
+  line-height: 1.9;
+  font-size: 16px;
+
+  @media screen and(min-width: 768px) {
     display: flex;
-    align-items: center;
-    background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(100%);
-    transition: transform $duration $cubic;
-    
-    .portfolio-overlay__text {
-      display: flex;
-      padding: 0 24px;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 1.56;
-      letter-spacing: 0.03em;
-      color: $white-color;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .portfolio-card__item {
+    transition: box-shadow $duration $cubic;
+    min-width: 320px;
+    margin-bottom: 30px;
+
+    @media screen and(min-width: 768px) {
+      width: 354px;
     }
-  
   }
-  
-  .card-overflow {
-   
-    position: relative;
-    overflow: hidden;
+
+  &__item:hover,
+  &__item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  
-  
-  
-  
+
+  .portfolio-card__item:last-child{
+    @media screen and(min-width: 768px) {
+      margin-bottom: 0;
+    }
+  }
+
+  &__item:hover .portfolio-overlay,
+  &__item:focus .portfolio-overlay {
+    transform: translateY(0);
+  }
+
+  .portfolio-card__subtitle {
+    color: $primary-text-color;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+    white-space: nowrap;
+  }
+
+  .portfolio-card__description {
+    background: $white-color;
+    padding: 20px 24px;
+    background-color: $white-color;
+    border-left: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
+  }
+  .portfolio-card__text {
+    color: $secondery-text-color;
+  }
+}
+
+.portfolio-card img {
+  @media screen and(min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and(min-width: 768px) {
+    width: 354px;
+  }
+}
+
+.portfolio-card a {
+  text-decoration: none;
+}
+
+/* Портфолио екшин */
+
+.portfolio-overlay {
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  display: flex;
+  align-items: center;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform $duration $cubic;
+
+  .portfolio-overlay__text {
+    display: flex;
+    padding: 0 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: $white-color;
+  }
+}
+
+.card-overflow {
+  position: relative;
+  overflow: hidden;
+}
