--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,54 +1,71 @@
 .team-bg {
-    background-color: #f5f4fa;
-  }
-  
-  .team {
-    .team__item {
-      text-align: center;
-      background: #ffffff;
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-      border-radius: 0px 0px 4px 4px;
-     
-     
-      &:not(:last-child){
-       
-          margin-bottom: 30px;
-        
-      }
-    }
-    .team__photo{
-      max-width: 450px;
-      max-height: 460px;
-    }
-   
-  
-    .team__text {
-      color: $secondery-text-color;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 1.18;
-      margin-bottom: 16px;
-    }
-    .team__subtitle {
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.18;
-      margin-bottom: 10px;
-    }
-  
-    .team__wrap {
-      padding-top: 30px;
-      padding-bottom: 24px;
-      
+  background-color: #f5f4fa;
+}
 
-      
-    }
-
-
+.team {
+  @media screen and(min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
   }
 
- 
-  
-  
-  
+  .team__item {
+    text-align: center;
+    background: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    @media screen and(min-width: 768px) {
+      width: 354px;
+
+      height: 536px;
+    }
+  }
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+
+    @media screen and(min-width: 768px) {
+      margin-bottom: 0;
+    }
+  }
+
+  .team__item:nth-child(2n + 1) {
+    @media screen and(min-width: 768px) {
+      margin-right: 30px;
+    }
+  }
+
+  .team__item:nth-child(-n + 2) {
+    @media screen and(min-width: 768px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  .team__photo {
+    max-width: 450px;
+    max-height: 460px;
+
+    @media screen and(min-width: 768px) {
+      max-width: 354px;
+    }
+  }
+
+  .team__text {
+    color: $secondery-text-color;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.18;
+    margin-bottom: 16px;
+  }
+  .team__subtitle {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    margin-bottom: 10px;
+  }
+
+  .team__wrap {
+    padding-top: 30px;
+    padding-bottom: 24px;
+  }
+}
