--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ body {
 }
 
 img {
+  width: 100%;
+  height: auto;
   display: block;
 }
 
@@ -38,7 +40,6 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
 }
 
 @media screen and (min-width: 480px) {
@@ -79,6 +80,22 @@ ul {
   visibility: hidden;
   pointer-events: none;
   position: absolute;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .title {
+    font-size: 36px;
+    margin-bottom: 50px;
+    line-height: 1.16;
+  }
 }
 
 .header {
@@ -181,13 +198,14 @@ ul {
   }
 }
 
-.main-nav .main-nav__item:not(:last-child) {
-  margin-bottom: 32px;
+@media screen and (max-width: 767px) {
+  .main-nav .main-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .main-nav .main-nav__item:not(:last-child) {
-    margin-bottom: 0;
     margin-right: 50px;
   }
 }
@@ -369,8 +387,8 @@ ul {
 }
 
 .hero {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-bg-image.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg-image.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-bg-image-phone.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg-image-phone.jpg");
   background-color: #2f303a;
   margin-left: auto;
   margin-right: auto;
@@ -383,10 +401,19 @@ ul {
   padding-bottom: 118px;
 }
 
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-bg-image-tablet.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg-image-tablet.jpg");
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .hero {
     height: 600px;
     padding: 200px 0;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-bg-image.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-bg-image.jpg");
   }
 }
 
@@ -435,6 +462,24 @@ ul {
   background-color: #188ce8;
 }
 
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/hero-bg-image-phone@2x.jpg");
+  }
+}
+
+@media screen and (max-width: 1199px) and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/hero-bg-image-tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../images/hero-bg-image-2x.jpg");
+  }
+}
+
 /* modal window */
 .backdrop {
   z-index: 2;
@@ -451,11 +496,6 @@ ul {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 93px 15px;
   overflow-y: scroll;
-}
-
-.backdrop .backdrop__modal {
-  -webkit-transform: translate(-50%, -50%) scale(0.7);
-          transform: translate(-50%, -50%) scale(0.7);
 }
 
 .backdrop .backdrop__modal {
@@ -478,13 +518,14 @@ ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 1200px) {
   .backdrop .backdrop__modal {
-    min-width: 450px;
+    width: 450px;
+    height: 609px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .backdrop .backdrop__modal {
     min-width: 528px;
     min-height: 581px;
@@ -498,12 +539,6 @@ ul {
   letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 12px;
-}
-
-@media screen and (min-width: 768px) {
-  .backdrop .backdrop__title {
-    line-height: 1.15;
-  }
 }
 
 .backdrop .backdrop__button-close {
@@ -647,7 +682,7 @@ ul {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .modal .modal__item-checkbox {
     font-size: 14px;
     margin-bottom: 30px;
@@ -683,63 +718,40 @@ ul {
   color: #2196f3;
 }
 
-.our-features {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.our-features .our-features__item:not(:last-child) {
-  margin-bottom: 30px;
+.wrap-all-forms-modal {
+  text-align: start;
 }
 
 @media screen and (min-width: 768px) {
-  .our-features .our-features__item:not(:last-child) {
-    margin-bottom: 0;
+  .our-features {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .our-features .our-features__item:nth-child(-n + 2) {
+@media screen and (max-width: 767px) {
+  .our-features .our-features__item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .our-features .our-features__item:nth-child(-n + 2) {
-    margin-bottom: 0px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .our-features .our-features__item:nth-child(2n + 1) {
-    margin-right: 30px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .our-features .our-features__item:nth-child(2n + 1) {
-    margin-right: 0;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .our-features .our-features__item:not(:last-child) {
-    margin-right: 30px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .our-features .our-features__item {
-    width: 354px;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .our-features .our-features__item {
-    width: 270px;
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 4 * 30px) / 4);
+        flex-basis: calc((100% - 4 * 30px) / 4);
   }
 }
 
@@ -781,12 +793,6 @@ ul {
           align-items: center;
 }
 
-@media screen and (min-width: 480px) {
-  .our-features .our-features__bg {
-    width: 100%;
-  }
-}
-
 .our-features .our-features__icon {
   fill: #212121;
 }
@@ -795,6 +801,12 @@ ul {
   visibility: hidden;
   pointer-events: none;
   position: absolute;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-specials {
+    padding-bottom: 0;
+  }
 }
 
 .section__what-we-do {
@@ -809,10 +821,6 @@ ul {
 
 .what-we-do .what-we-do__item {
   position: relative;
-}
-
-.what-we-do .what-we-do__item {
-  margin-right: 30px;
 }
 
 .what-we-do .what-we-do__item:not(:last-child) {
@@ -866,6 +874,13 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team .team__item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
@@ -875,45 +890,22 @@ ul {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  height: auto;
 }
 
 @media screen and (min-width: 768px) {
   .team .team__item {
-    width: 354px;
-    height: 536px;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
   }
 }
 
-.team .team__item:not(:last-child) {
-  margin-bottom: 30px;
-}
-
-@media screen and (min-width: 768px) {
-  .team .team__item:not(:last-child) {
-    margin-bottom: 0;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .team .team__item:nth-child(2n + 1) {
-    margin-right: 30px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .team .team__item:nth-child(-n + 2) {
-    margin-bottom: 30px;
-  }
-}
-
-.team .team__photo {
-  max-width: 450px;
-  max-height: 460px;
-}
-
-@media screen and (min-width: 768px) {
-  .team .team__photo {
-    max-width: 354px;
+@media screen and (min-width: 1200px) {
+  .team .team__item {
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 4 * 30px) / 4);
+        flex-basis: calc((100% - 4 * 30px) / 4);
   }
 }
 
@@ -943,37 +935,35 @@ ul {
   display: flex;
   -ms-flex-flow: wrap;
       flex-flow: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  margin: -15px;
 }
 
-@media screen and (min-width: 768px) {
-  .customers {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-}
-
-.customers .customers__item:nth-child(-2n + 3) {
-  margin-bottom: 30px;
-}
-
-@media screen and (min-width: 768px) {
-  .customers .customers__item:nth-child(-2n + 3) {
-    margin-bottom: 0;
+@media screen and (min-width: 480px) {
+  .customers__item {
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .customers .customers__item:nth-child(-n+3) {
-    margin-bottom: 30px;
+  .customers__item {
+    -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
+        flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers__item {
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 6 * 30px) / 6);
+        flex-basis: calc((100% - 6 * 30px) / 6);
   }
 }
 
 .customers .customers__link {
-  width: 210px;
+  width: 100%;
   height: 92px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1009,8 +999,21 @@ ul {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-bg {
+    text-align: unset;
+  }
+}
+
 .wrap-address {
   margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .wrap-address {
+    margin-bottom: 0;
+    margin-right: 70px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1091,6 +1094,14 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .sign-us .sign-us__input {
+    margin-bottom: 0;
+    margin-right: 12px;
+    width: 358px;
+  }
+}
+
 .sign-us .sign-us__btn {
   margin: 0 auto;
   background: #2196f3;
@@ -1120,6 +1131,25 @@ ul {
   width: 24px;
   height: 24px;
   margin-left: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .sign-us .sign-us__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .wrap-address-join-sign-us {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .portfolio-nav {
@@ -1178,8 +1208,8 @@ ul {
 }
 
 .portfolio-card {
+  font-size: 18px;
   line-height: 1.9;
-  font-size: 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1189,10 +1219,25 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    margin: -15px;
   }
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-card__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+.portfolio-card .portfolio-card__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
 }
 
 .portfolio-card .portfolio-card__item {
@@ -1200,25 +1245,27 @@ ul {
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  min-width: 320px;
-  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .portfolio-card .portfolio-card__item {
-    width: 354px;
+    -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-card .portfolio-card__item {
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
+        flex-basis: calc((100% - 3 * 30px) / 3);
   }
 }
 
 .portfolio-card__item:hover, .portfolio-card__item:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio-card .portfolio-card__item:last-child {
-    margin-bottom: 0;
-  }
 }
 
 .portfolio-card__item:hover .portfolio-overlay,
@@ -1234,7 +1281,6 @@ ul {
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
-  white-space: nowrap;
 }
 
 .portfolio-card .portfolio-card__description {
@@ -1244,22 +1290,13 @@ ul {
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .portfolio-card .portfolio-card__text {
   color: #757575;
-}
-
-@media screen and (min-width: 480px) {
-  .portfolio-card img {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio-card img {
-    width: 354px;
-  }
 }
 
 .portfolio-card a {
@@ -1364,12 +1401,12 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .menu-button {
@@ -1406,13 +1443,12 @@ ul {
 
 .js-close-menu {
   position: absolute;
-  top: -35px;
-  right: -25px;
+  top: 15px;
+  right: 15px;
   z-index: 99;
 }
 
 .menu-container {
-  padding: 48px 40px;
   z-index: 99;
   position: fixed;
   top: 0;
@@ -1449,10 +1485,11 @@ ul {
 }
 
 .menu-container .menu-container__wrap {
-  max-width: 450px;
+  max-width: 480px;
   position: relative;
   margin-right: auto;
   margin-left: auto;
+  padding: 48px 40px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1462,6 +1499,7 @@ ul {
     display: flex;
     margin: 0;
     max-width: 100%;
+    padding: 0;
   }
 }
 
