--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,6 +6,7 @@ body {
   line-height: 1.8;
   letter-spacing: 0.03em;
   margin: 0;
+ 
   
 }
 
@@ -13,6 +14,8 @@ body {
   list-style: none;
 }
 img {
+  width: 100%;
+  height: auto;
   display: block;
 }
 
@@ -34,22 +37,21 @@ ul {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
+ 
 
   @media screen and (min-width: 480px) {
     width: 480px;
+
   }
 
   @media screen and(min-width: 768px) {
-    
     width: 768px;
+   
   }
 
   @media screen and(min-width: 1200px) {
     width: 1200px;
   }
-
-
 }
 
 .section {
@@ -58,7 +60,7 @@ ul {
 
   @media screen and(min-width: 1200px) {
     padding-top: 94px;
-  padding-bottom: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -71,3 +73,19 @@ ul {
   pointer-events: none;
   position: absolute;
 }
+.title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 30px;
+
+  @media screen and(min-width: 1200px) {
+    font-size: 36px;
+    margin-bottom: 50px;
+    line-height: 1.16;
+  }
+}
+
+
+
