--- a/sass/components/_customars.scss
+++ b/sass/components/_customars.scss
@@ -1,34 +1,27 @@
 .customers {
   display: flex;
   flex-flow: wrap;
-  justify-content: space-between;
-  @media screen and(min-width: 768px){
-    justify-content: space-evenly;
+  margin: -15px;
 
-  }
-
-
-  .customers__item:nth-child(-2n + 3) {
-    margin-bottom: 30px;
+  &__item {
+    @media screen and(min-width: 480px) {
+      flex-basis: calc((100% - 2 * 30px) / 2);
+      margin: 15px;
+    }
 
     @media screen and(min-width: 768px) {
-      margin-bottom: 0;
-    }
-  }
-
- 
-
-  .customers__item:nth-child(-n+3){
-    @media screen and(min-width: 768px){
-      margin-bottom: 30px;
-
+      flex-basis: calc((100% - 3 * 30px) / 3);
+      margin: 15px;
     }
 
+    @media screen and(min-width: 1200px) {
+      margin: 15px;
+      flex-basis: calc((100% - 6 * 30px) / 6);
+    }
   }
- 
 
   .customers__link {
-    width: 210px;
+    width: 100%;
     height: 92px;
     display: flex;
     border: 1px solid #afb1b8;
@@ -37,6 +30,8 @@
     align-items: center;
     color: #afb1b8;
     transition: color $duration $cubic, border $duration $cubic;
+
+  
   }
 
   &__link:hover,
