--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,13 +1,9 @@
 .menu-nav {
   z-index: 99;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  @media screen and (min-width: 768px){
+  justify-content: space-between;
 
-    
-    
-  }
 
 }
 
@@ -39,13 +35,13 @@
 
 .js-close-menu {
   position: absolute;
-  top: -35px;
-  right: -25px;
+  top: 15px;
+  right: 15px;
   z-index: 99;
 }
 
 .menu-container {
-  padding: 48px 40px;
+  
   z-index: 99;
   position: fixed;
   top: 0;
@@ -75,16 +71,18 @@
   }
 
   .menu-container__wrap {
-    max-width: 450px;
+    max-width: 480px;
     position: relative;
     margin-right: auto;
     margin-left: auto;
+    padding: 48px 40px;
 
     @media screen and (min-width: 768px){
     
       display: flex;
       margin: 0;
       max-width: 100%;
+      padding: 0;
     }
   }
 
