--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,10 +13,6 @@
   overflow-y: scroll;
 
   .backdrop__modal {
-    transform: translate(-50%, -50%) scale(0.7);
-  }
-
-  .backdrop__modal {
     position: absolute;
     display: block;
     top: 50%;
@@ -31,11 +27,14 @@
     border-radius: 4px;
     transition: transform $duration $cubic;
 
-    @media screen and(min-width: 480px) and(max-width: 767px) {
-      min-width: 450px;
+    @media screen and (min-width: 480px) and (max-width: 1200px) {
+      width: 450px;
+      height: 609px;
     }
 
-    @media screen and (min-width: 768px) {
+   
+
+    @media screen and (min-width: 1200px) {
       min-width: 528px;
       min-height: 581px;
     }
@@ -48,9 +47,7 @@
     color: $primary-text-color;
     margin-bottom: 12px;
 
-    @media screen and (min-width: 768px) {
-      line-height: 1.15;
-    }
+   
   }
 
   .backdrop__button-close {
@@ -160,10 +157,6 @@
     resize: none;
     padding: 12px 16px;
     margin-bottom: 20px;
-
-    @media screen and (min-width: 768px) {
-        
-    }
   }
 
   .modal__item-checkbox {
@@ -176,11 +169,10 @@
     line-height: 1.7;
     letter-spacing: 0.03em;
 
-    @media screen and (min-width: 768px) {
-        font-size: 14px;
-        margin-bottom: 30px;
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      margin-bottom: 30px;
     }
-
   }
 
   .modal__checkbox {
@@ -207,4 +199,7 @@
   .modal__contract {
     color: $accent-color;
   }
+}
+.wrap-all-forms-modal {
+  text-align: start;
 }
