--- a/sass/components/_our-features.scss
+++ b/sass/components/_our-features.scss
@@ -1,44 +1,25 @@
 .our-features {
-  display: flex;
-  flex-wrap: wrap;
-
-  .our-features__item:not(:last-child) {
-    margin-bottom: 30px;
-    @media screen and(min-width: 768px) {
-      margin-bottom: 0;
-    }
+  @media screen and(min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
   }
 
-  .our-features__item:nth-child(-n + 2) {
-    @media screen and(min-width: 768px) {
+  .our-features__item:not(:last-child) {
+    @media screen and(max-width: 767px) {
       margin-bottom: 30px;
     }
-
-    @media screen and(min-width: 1200px) {
-      margin-bottom: 0px;
-    }
   }
 
-  .our-features__item:nth-child(2n + 1) {
-    @media screen and(min-width: 768px) {
-      margin-right: 30px;
-    }
-    @media screen and(min-width: 1200px) {
-      margin-right: 0;
-    }
-  }
-  .our-features__item:not(:last-child) {
-    @media screen and(min-width: 1200px) {
-      margin-right: 30px;
-    }
-  }
   .our-features__item {
     @media screen and(min-width: 768px) {
-      width: 354px;
+      flex-basis: calc((100% - 2 * 30px) / 2);
+      margin: 15px;
     }
 
     @media screen and(min-width: 1200px) {
-      width: 270px;
+      margin: 15px;
+      flex-basis: calc((100% - 4 * 30px) / 4);
     }
 
     .our-features__subtitle {
@@ -69,9 +50,6 @@
     border-radius: 4px;
     justify-content: center;
     align-items: center;
-    @media screen and(min-width: 480px) {
-      width: 100%;
-    }
   }
 
   .our-features__icon {
@@ -83,4 +61,10 @@
   visibility: hidden;
   pointer-events: none;
   position: absolute;
+}
+
+.our-specials {
+  @media screen and(min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
