--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -44,22 +44,37 @@
 // card
 
 .portfolio-card {
+  font-size: 18px;
   line-height: 1.9;
-  font-size: 16px;
 
   @media screen and(min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    margin: -15px;
+  }
+
+  &__item:not(:last-child) {
+    @media screen and(max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  .portfolio-card__link{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 
   .portfolio-card__item {
     transition: box-shadow $duration $cubic;
-    min-width: 320px;
-    margin-bottom: 30px;
 
     @media screen and(min-width: 768px) {
-      width: 354px;
+      flex-basis: calc((100% - 2 * 30px) / 2);
+      margin: 15px;
+    }
+    @media screen and(min-width: 1200px) {
+      margin: 15px;
+      flex-basis: calc((100% - 3 * 30px) / 3);
     }
   }
 
@@ -67,12 +82,6 @@
   &__item:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-
-  .portfolio-card__item:last-child{
-    @media screen and(min-width: 768px) {
-      margin-bottom: 0;
-    }
   }
 
   &__item:hover .portfolio-overlay,
@@ -87,7 +96,7 @@
     line-height: 2;
     letter-spacing: 0.06em;
     margin-bottom: 4px;
-    white-space: nowrap;
+    
   }
 
   .portfolio-card__description {
@@ -97,19 +106,10 @@
     border-left: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
+    flex-grow: 1;
   }
   .portfolio-card__text {
     color: $secondery-text-color;
-  }
-}
-
-.portfolio-card img {
-  @media screen and(min-width: 480px) {
-    width: 450px;
-  }
-
-  @media screen and(min-width: 768px) {
-    width: 354px;
   }
 }
 
