--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,47 +6,31 @@
   @media screen and(min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin: -15px;
   }
 
+  .team__item:not(:last-child) {
+    @media screen and(max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
   .team__item {
     text-align: center;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    height: auto;
 
     @media screen and(min-width: 768px) {
-      width: 354px;
-
-      height: 536px;
+      flex-basis: calc((100% - 2 * 30px) / 2);
+      margin: 15px;
+     
     }
-  }
-  .team__item:not(:last-child) {
-    margin-bottom: 30px;
-
-    @media screen and(min-width: 768px) {
-      margin-bottom: 0;
-    }
-  }
-
-  .team__item:nth-child(2n + 1) {
-    @media screen and(min-width: 768px) {
-      margin-right: 30px;
-    }
-  }
-
-  .team__item:nth-child(-n + 2) {
-    @media screen and(min-width: 768px) {
-      margin-bottom: 30px;
-    }
-  }
-
-  .team__photo {
-    max-width: 450px;
-    max-height: 460px;
-
-    @media screen and(min-width: 768px) {
-      max-width: 354px;
+    @media screen and(min-width: 1200px) {
+      margin: 15px;
+      flex-basis: calc((100% - 4 * 30px) / 4);
+      
     }
   }
 
