--- a/sass/components/_social-icon.scss
+++ b/sass/components/_social-icon.scss
@@ -2,45 +2,42 @@
 
 .social {
   display: flex;
+  justify-content: center;
+
+  .social__item:not(:last-child) {
+    margin-right: 10px;
+  }
+  .social__link {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    border-color: transparent;
+    border-radius: 50%;
+    fill: #afb1b8;
     justify-content: center;
-  
-    .social__item:not(:last-child) {
-      margin-right: 10px;
-    }
-    .social__link {
-      display: flex;
-      width: 44px;
-      height: 44px;
-      border-color: transparent;
-      border-radius: 50%;
-      fill: #afb1b8;
-      justify-content: center;
-      align-items: center;
-      transition: background-color $duration $cubic, fill $duration $cubic;
-    }
-    .social__icon {
-      width: 20px;
-      height: 20px;
-    }
-  
-    &__link:hover,
-    &__link:focus {
-      background-color: $accent-color;
-      fill: $white-color;
-      cursor: pointer;
-    }
+    align-items: center;
+    transition: background-color $duration $cubic, fill $duration $cubic;
+  }
+  .social__icon {
+    width: 20px;
+    height: 20px;
   }
 
-  .footer-icon-bg{
+  &__link:hover,
+  &__link:focus {
+    background-color: $accent-color;
     fill: $white-color;
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: background-color $duration $cubic;
-    margin-bottom: 60px;
-
-   
-    
+    cursor: pointer;
   }
-  
- 
+}
 
-  
+.footer-icon-bg {
+  fill: $white-color;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color $duration $cubic;
+  margin-bottom: 60px;
+}
+
+.social__icon-footer {
+  fill: $white-color;
+}
